# PiscinePythonDataScience

Array/ex00/: give_bmi.py
Array/ex01/: array2D.py
Array/ex02/: load_image.py  tester.py
Array/ex03/: zoom.py
Array/ex04/: rotate.py
Array/ex05/: load_image.py  pimp_image.py  tester.py
Starting/ex00/: Hello.py
Starting/ex01/: format_ft_time.py
Starting/ex02/: find_ft_type.py
Starting/ex03/: NULL_not_found.py
Starting/ex04/: whatis.py
Starting/ex05/: building.py
Starting/ex06/: filterstring.py  ft_filter.py
Starting/ex07/: sos.py
Starting/ex08/: Loading.py  tester.py
Starting/ex09/: README.md  ft_count_lines.py  pyproject.toml  setup.py
Starting/ex09/ftpackage/: core.py
